added new lit to the review

--- a/docs/assets/manuscript-biblio.bib
+++ b/docs/assets/manuscript-biblio.bib
@@ -243,6 +243,19 @@
   file = {C\:\\Users\\Meng Le Zheng\\Zotero\\storage\\D4BXKYF9\\Ratcliffe - 2002 - Damned If You Don't, Damned If You Do Crime Mappi.pdf}
 }
 
+
+@techreport{rayPerceptionsPolicingCrime2012,
+  title = {Perceptions of the {{Policing}} and {{Crime Mapping}} '{{Trailblazers}}'},
+  author = {Ray, Kathryn and Davidson, Rosemary and Husain, Fatima and Vegeris, Sandra and Vowden, Kim and Karn, Jacqui},
+  year = {2012},
+  address = {{United Kingdom}},
+  abstract = {The study findings suggest a number of implications for future policy. First, careful thought must be given to future improvements to www.police.uk and related initiatives. This stems from the finding that more information is not always desirable and can be counter-productive. The information provided must be high quality, relevant to public concerns, usable, and intelligible. Second, the type of improvement made to the Web site should depend on the purposes determined for it. One recommended purpose is crime prevention. Improvements in this area could include more frequent updates on what crimes are prevalent in various areas and recommended steps for preventing specific types of crime. A second recommended purpose of the Web site is for holding the police accountable to the community by showing evidence of what the police are doing and the effectiveness of their actions.   The study findings suggest that providing information alone is unlikely to stimulate greater public engagement in police accountability. Wider activity is needed to inform the public on how to use the information on crime and policing. In order to encourage regular use of the Web site, users should be encouraged to create an account and sign up for alerts tailored to individual location and interest. This study collected data from 22 semistructured telephone interviews with policymakers and practitioners involved in the development and implementation of the initiatives, and 14 focus groups were held with members of the public. 1 figure, 2 tables, 21 references, and appended description of research methods, awareness and use of online crime maps, and public suggestions for improvements},
+  langid = {english},
+  annotation = {OCLC: 4956751750},
+  file = {C\:\\Users\\Meng Le Zheng\\Zotero\\storage\\HU5SQDZ8\\Ray et al. - 2012 - Perceptions of the Policing and Crime Mapping 'Tra.pdf}
+}
+
+
 @article{sampsonPlottingCrimesToo2010,
   title = {Plotting {{Crimes}}: {{Too True}} to {{Be Good}}? {{The Rationale}} and {{Risks}} behind {{Crime Mapping}} in the {{UK}}},
   shorttitle = {Plotting {{Crimes}}},
@@ -325,5 +338,3 @@
   langid = {english},
   file = {C\:\\Users\\Meng Le Zheng\\Zotero\\storage\\RGAFNSJM\\www.police.html}
 }
-
-
